2006-01-18  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/testlet/java/util/regex/Pattern/testdata1,
	gnu/testlet/java/util/regex/Pattern/testdata2:
	Moved some cases from testdata2 to testdata1.

2006-01-17  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/net/SocketPermission/implies.java: Remove a bit
	of debugging code that sneaked through.

2006-01-17  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/text/StyleConstants/constants.java: New file,
	* gnu/testlet/javax/swing/text/StyleConstants/getAlignment.java: Likewise,
	* gnu/testlet/javax/swing/text/StyleConstants/getBackground.java: Likewise,
	* gnu/testlet/javax/swing/text/StyleConstants/getBidiLevel.java: Likewise,
	* gnu/testlet/javax/swing/text/StyleConstants/getComponent.java: Likewise,
	* gnu/testlet/javax/swing/text/StyleConstants/getFirstLineIndent.java: Likewise,
	* gnu/testlet/javax/swing/text/StyleConstants/getFontFamily.java: Likewise,
	* gnu/testlet/javax/swing/text/StyleConstants/getFontSize.java: Likewise,
	* gnu/testlet/javax/swing/text/StyleConstants/getForeground.java: Likewise,
	* gnu/testlet/javax/swing/text/StyleConstants/getIcon.java: Likewise,
	* gnu/testlet/javax/swing/text/StyleConstants/getLeftIndent.java: Likewise,
	* gnu/testlet/javax/swing/text/StyleConstants/getLineSpacing.java: Likewise,
	* gnu/testlet/javax/swing/text/StyleConstants/getRightIndent.java: Likewise,
	* gnu/testlet/javax/swing/text/StyleConstants/getSpaceAbove.java: Likewise,
	* gnu/testlet/javax/swing/text/StyleConstants/getSpaceBelow.java: Likewise,
	* gnu/testlet/javax/swing/text/StyleConstants/getTabSet.java: Likewise,
	* gnu/testlet/javax/swing/text/StyleConstants/isBold.java: Likewise,
	* gnu/testlet/javax/swing/text/StyleConstants/isItalic.java: Likewise,
	* gnu/testlet/javax/swing/text/StyleConstants/isStrikeThrough.java: Likewise,
	* gnu/testlet/javax/swing/text/StyleConstants/isSubscript.java: Likewise,