@@ -1,3 +1,8 @@
+2006-01-16  Lillian Angel  <langel@redhat.com>
+
+	* gnu/testlet/javax/swing/text/DefaultStyledDocument/ElementBuffer/ElementStructure8.java:
+	Added more complicated tests and checkpoints.
+
 2006-01-18  Ito Kazumitsu  <kaz@maczuka.gcd.org>
 
 	* gnu/testlet/java/util/regex/Pattern/testdata1,
